styles.css
html {
  height: 100%;
}

/* Set the font family for the body and background image */
body {
  font-family: 'Roboto', 'Arial', 'Helvetica Neue', 'Lato', sans-serif;
  background-image: url("img/bg_pic_compressed_blur.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  width: 100%;
  margin: 0;
  padding: 0;
  height: 100%;
}

.bar-header-downarrow {
  position: relative;
  min-height: 100%;
  width: 100%;
  height: 100%;
}

/* Add a semi-transparent background filter on top of the background image */
#filter {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 0;
}

/* Set the styling for the navbar */
.navbar {
  z-index: 999;
  position: fixed;
  left: 0;
  right: 0;
  min-height: 5%;
}

/* Set the font weight and right padding for the navbar brand */
.navbar-brand {
  font-weight: 600;
  font-size: 25px;
}

#mainNav {
  padding-left: 5%;
  padding-right: 5%;
}

/* Set the font weight for the navbar toggler */
.navbar-toggler {
  font-weight: 400;
}

/* Set the font weight and right margin for the navigation links */
.nav-link {
  font-weight: 600;
  margin-right: 1rem;
  color: #ffffff;
}

@media (min-width: 992px) {
    .navbar-nav {
      position: absolute;
      left: 50%;
      transform: translate(-50%);
    }
}

.nav-item {
  text-align: right;
}

@media (min-width: 992px) {
  .nav-item {
    align-self: center;
    text-align: center;
  }
}

/* Set the background color and transition for the navbar when it shrinks */
.navbar-shrink {
  background-color: rgba(14, 12, 10, 0.7);
  transition: background-color 0.5s ease;
}

/* Set the cursor style for the navigation links */
.nav-link[href^="#"] {
  cursor: pointer;
}

.active {
  color: rgb(255, 192, 34);
}

.nav-link:hover {
  color: #ffa000;
}

.navbar-brand:hover {
  color: #ffa000;
}

/* Set the position, height, and styling for the header container */
.header-container {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Set the position and margin bottom for the header content */
.header-content {
  position: relative;
  z-index: inherit;
}

/* Set the z-index and padding bottom for the header image */
.header-img {
  z-index: inherit;
  padding-bottom: 35px;
  padding-top: 10rem;
}

/* Set the z-index and padding bottom for the header name */
.header-name {
  z-index: inherit;
  padding-bottom: 10px;
}

/* Set the z-index for the header description */
.header-description {
  z-index: inherit;
}

/* Set the font weight, font size, and padding bottom for the header main heading */
.h-d-1 {
  font-weight: 800;
  font-size: 190%;
  padding-bottom: 30px;
}

/* Set the z-index for the header button */
.header-button {
  z-index: inherit;
  margin-bottom: 5rem;
}

/* Set the padding, font size, and font weight for the header button */
#header-button {
  padding: 18px 25px;
  font-size: 24px;
  font-weight: 600;
}

/* Set the position, bottom, and animation for the header arrow */
.down-arrow {
  position: absolute;
  z-index: 1;
  animation: bounce 2s infinite;
  bottom: 2.6rem;
  left: 0;
  right: 0;
  margin: auto;
  padding-bottom: 1rem;
}

/* Set the keyframes for the header arrow animation */
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-20px);
  }
  60% {
    transform: translateY(-10px);
  }
}

#about {
  z-index: 1;
  background-color: #fff;
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  min-height: 100dvh;
}

.about-header {
  position: relative;
  font-weight: 900;
  font-size: larger;
  background: rgb(255, 255, 255);
  width: 100%;
  left: 0;
  z-index: 0;
  padding-top: 1rem;
  padding-bottom: 0.5rem;
  margin-top: 3rem;
}

.about-page {
  z-index: 1;
  margin: auto;
  display: flex;
  position: relative;
}

.nav-menubutton {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}

.img-wrap {
  margin-bottom: 1rem;
}

.about-icon1 {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
}

@media (max-width: 992px) {
  .about-icon1 {
    visibility: hidden;
    display: none;
  }
}

.about-icon2 {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
}

@media (min-width: 992px) {
  .about-icon2 {
    visibility: hidden;
    display: none;
  }
}

@media screen and (min-width: 992px) {
  .img-wrap {
    margin-bottom: 0;
  }
}

.about-text {
  text-align: left;
  font-size: 17px;
}

#about-button {
  font-size: 24px;
  font-weight: 600;
  background: #ffa000;
  border: none;
}

#about-button:hover {
  background: #178fdf;
}

#resume-button {
  font-size: 24px;
  font-weight: 600;
  background: #ffa000;
  border: none;
}

#resume-button:hover {
  background: #178fdf;
}

.about-buttons {
  padding-bottom: 1rem;
}

@media (min-width: 992px) {
  .about-footer {
    padding-top: 2rem;
  }
}

#skills {
  z-index: 1;
  background-color: #178fdf;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  min-height: 100dvh;
}

.skills-body {
  z-index: 1;
  justify-content: center;
}

.skills-body-headers {
  margin-left: auto;
  margin-right: auto;
  font-size: 31px;
  margin-top: 1rem;
  font-weight: 700;
}

.skills-body-text {
  width: 20rem;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 2rem;
}



.carousel-cell img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  /* dim unselected */
  opacity: 0.7;
  -webkit-transform: scale(0.85);
          transform: scale(0.85);
  -webkit-filter: blur(5px);
          filter: blur(5px);
  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s, transform 0.3s, -webkit-filter 0.3s, filter 0.3s;
          transition: opacity 0.3s, transform 0.3s, filter 0.3s;
}

/* brighten selected image */
.carousel-cell.is-selected img {
  opacity: 1;
  -webkit-transform: scale(1);
          transform: scale(1);
  -webkit-filter: none;
          filter: none;
}

@media screen and ( min-width: 768px ) {
  .carousel-cell {
    height: 400px;
  }
}

@media screen and ( min-width: 960px ) {
  .carousel-cell {
    width: 60%;
  }
}

@media screen and (max-width: 992px) {
  /* buttons, no circle */
  .flickity-prev-next-button {
    width: 60px !important;
    height: 60px !important;
    background: transparent !important;
  }
  .carousel-cell {
    width: 70%;
    height: 30rem !important;
    /* flex-box, center image in cell */
    display: -webkit-box;
    display: -webkit-flex;
    display:         flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
            justify-content: center;
    -webkit-align-items: center;
            align-items: center;
  }
}

@media screen and (min-width: 992px) {
  /* buttons, no circle */
  .flickity-prev-next-button {
    width: 90px !important;
    height: 90px !important;
    background: transparent !important;
  }
  .carousel-cell {
    width: 60%;
    height: 30rem !important;
    /* flex-box, center image in cell */
    display: -webkit-box;
    display: -webkit-flex;
    display:         flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
            justify-content: center;
    -webkit-align-items: center;
            align-items: center;
  }
}

.flickity-prev-next-button:hover {
  background: transparent;
  opacity: 1;
}
/* arrow color */
.flickity-prev-next-button .arrow {
  fill: white;
}
.flickity-prev-next-button.no-svg {
  color: white;
}
/* closer to edge */
.flickity-prev-next-button.previous { left: 0; }
.flickity-prev-next-button.next { right: 0; }
/* hide disabled button */
.flickity-prev-next-button:disabled {
  display: none;
}

#projects {
  z-index: 1;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: auto;
  min-height: 100dvh;
}

#projects-box {
  z-index: 1;
  background-color: black;
  color: white;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: 0px;
  padding: 0px;
  min-height: 100%;
}

.projects-header {
  padding-top: 1rem;
  padding-bottom: 4rem;
  margin-top: 3rem;
}

.carousel {
  width: 100%;
  height: 31.2rem;
}
.flickity-page-dots {
  bottom: 0 !important;
}

#contact {
  z-index: 3;
  background-color: #d9dadb;
  color: #fc9d10;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  right: 0;
  left: 0;
  margin: auto;
  min-height: 100dvh;
}

.btn-disabled {
  background-color: #ccc !important; 
  cursor: not-allowed !important;
}

#message {
  height: 12rem;
  min-width: 16rem;
  resize: none;
}

#contact {
  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("img/contact_background_compressed.jpg");;
  background-size: cover;
  background-repeat: no-repeat;
}

#contact-form-body {
  max-width: 45rem;
  width: 95%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.contact-body {
  padding: 2rem;
  padding-bottom: 1rem;
}

.entry-name {
  display: flex;
  position: relative;
  left: 0;
  font-size: .8rem;
  margin-bottom: .2rem;
  font-weight: 700;
  color: #6a6a6a;
}

.form-group {
  margin-bottom: 0.5rem;
}

.form-control {
  font-weight: 600;
  font-size: .8rem;
  max-width: 100%;
  background: #f0f0f0;
  border-color: #f0f0f0;
  padding: 1rem;
}

.submit-box {
  display: flex;
  justify-content: right;
}

.submit-button {
  width: 30%;
  padding-top: .8rem;
  padding-bottom: .8rem;
  font-size: 1rem;
  font-weight: 600;
  border-radius: .3rem;
}

@media (max-width: 600px) {
  .submit-button {
    width: 100%;
  }
}

.footer {
  background-color: #ffffff;
}

.footer-body {
  align-items: center;
  justify-content: center;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
}

#footer-link {
  text-decoration: none;
}

#footer-link:hover {
  text-decoration: underline;
}

#footer-link2 {
  text-decoration: none;
}

#footer-link2:hover {
  text-decoration: underline;
}

.footer-body-1 {
  order: 1;
}

.footer-body-2 {
  order: 2;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-top: 1rem;
}

.footer-body-3 {
  order: 3;
  padding-top: 1rem;
}

@media screen and ( max-width: 575px ) {
  .footer-body-1 {
    order: 3;
  }
  
  .footer-body-2 {
    order: 1;
  }
  
  .footer-body-3 {
    order: 2;
    padding-top: 1rem;
  }
}

.modal {
  display: none; /* Hide the modal by default */
  position: fixed;
  z-index: 9999;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
}

.modal-content {
  display: flex;
  position: absolute;
  justify-content: center;
  align-items: center;
  top: 0%;
  background-color: #fff; /* Modal content background color */
}

.modal-body {
  display: flex;
  justify-content: center;
}

#x-button {
  position: absolute;
  top: 0;
  right: 0;
  background-color: rgba(14, 12, 10, 0);
  height: 4rem;
  width: 4rem;
  font-size: 3rem;
  border: 0px solid white;
}

body.modal-open {
  overflow: hidden;
}

#ship-img {
  display: flex;
  justify-content: center;
  align-items: center;
}

#name::placeholder, #email::placeholder, #company::placeholder, #message::placeholder {
  color: #a9a9a9;
  opacity: 1;
}

/* {
  border: 1px solid red !important;
}

